# amplifier-eval-harness

./: .gitignore  README.md  pyproject.toml
amplifier_eval_harness/: _log.py  cli.py  config.py  gitea.py  mount_plan.py  profile.py  results.py  runner.py  usage.py
configs/: advanced-smoke.yaml  advanced.yaml  baseline.yaml  buildup-mid.yaml  buildup-smoke-openai.yaml  buildup-smoke.yaml  cross-anthropic.yaml  cross-openai.yaml  exp-lean.yaml  provider-leak-fix-smoke.yaml  scenarios-smoke.yaml  smoke.yaml  stress-smoke.yaml  stress.yaml  usage-validation.yaml
docs/designs/: architecture.md
eval_harness/: __init__.py  cli.py  config.py  gitea.py  profile.py  runner.py
profiles/: eval-base.yaml.tmpl
scenarios/bug-hunt-readonly/: prompt.md
scenarios/bug-hunt-readonly/workspace/: cache.py
scenarios/csv-parser-strict/: prompt.md
scenarios/csv-parser-strict/workspace/: SPEC.md  csv_parser.py  test_csv_parser.py
scenarios/debug-no-test/: prompt.md
scenarios/debug-no-test/workspace/: BUG_REPORT.md  cache.py  test_cache.py
scenarios/explain-repo/: prompt.md
scenarios/explain-repo/workspace/: README.md
scenarios/explain-repo/workspace/greeter/: __init__.py  __main__.py  greetings.py  moods.py  render.py
scenarios/fix-failing-test/: prompt.md
scenarios/fix-failing-test/workspace/: durations.py  test_durations.py
scenarios/multi-bug-fix/: prompt.md
scenarios/multi-bug-fix/workspace/: colors.py  test_colors.py
scenarios/multi-file-feature/: prompt.md
scenarios/multi-file-feature/workspace/: test_todoctl.py
scenarios/multi-file-feature/workspace/todoctl/: __init__.py  __main__.py  models.py  render.py  storage.py
scenarios/optimize-with-trap/: prompt.md
scenarios/optimize-with-trap/workspace/: bench.py  dedupe.py  test_dedupe.py
scenarios/perf-investigation/: prompt.md
scenarios/perf-investigation/workspace/: bench.py  test_text_proc.py  text_proc.py
scenarios/plan-feature/: prompt.md
scenarios/plan-feature/workspace/: README.md
scenarios/plan-feature/workspace/greeter/: moods.py
scenarios/refactor-extract/: prompt.md
scenarios/refactor-extract/workspace/: pipeline.py  test_pipeline.py
scenarios/spec-driven-impl/: prompt.md
scenarios/spec-driven-impl/workspace/: SPEC.md  roman.py  test_roman.py
scenarios/write-tests/: prompt.md
scenarios/write-tests/workspace/: slugify.py  test_slugify.py
settings/: anthropic-claude-sonnet.yaml  default-providers.yaml  openai-providers.yaml
tests/: test_gitea_concurrent.py  test_profile_gitea_host_override.py  test_runner_file_pull.py
